--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				<div class="text-1 mt-4 ">Hello, my name is</div>
 				<div class="text-2 mt-1">Pratham Chapla</div>
 				<div class="text-3 mt-1">And I am a Passionate <span id="element"></span></div>
-				<a href="#">Hire me</a>
+				<a href="https://in.linkedin.com/in/pratham-chapla-733903210" target="_blank">Hire me</a>
 			</div>
 		</div>
 	</section>
@@ -187,7 +187,7 @@
 					<div> &#9658; <span class="skill-font">Scripting Languages:</span> HTML, CSS, Bootstrap CSS</div>
 					<div> &#9658; <span class="skill-font">Database:</span> MySQL</div>
 					<div> &#9658; <span class="skill-font">ORM Tools:</span> Hibernate, JPA</div>
-					<div> &#9658; <span class="skill-font">Framework:</span> Spring, Spring MVC,Spring Boot, SmartGWT
+					<div> &#9658; <span class="skill-font">Framework:</span> Spring, Spring MVC, Spring Boot, SmartGWT
 					</div>
 					<div> &#9658; <span class="skill-font">Reporting Tool:</span> Jasper Report</div>
 					<div> &#9658; <span class="skill-font">Softwares:</span> IntelliJ, Eclipse, VSCode, JasperStudio
@@ -386,6 +386,7 @@
 			<div class="col-md-2"></div>
 		</div>
 		<span>Developed By <a href="">PRATHAM</a> ❤️ | 2024 </span>
+		<span>&#169; All Rights Reserved By Pratham Chapla</span>
 	</footer>
 
 	<!-- theme toggler  -->
